--- a/articolo.html
+++ b/articolo.html
@@ -244,10 +244,8 @@
       </address>
     </footer>
     <div class="topRightBtns">
-      <div class="topRight_one">
-        <i class="far fa-plus-square"></i>
-      </div>
-      <div class="topRight_two"><i class="far fa-calendar-alt"></i></div>
+      <i class="far fa-plus-square"></i>
+      <i class="far fa-calendar-alt"></i>
     </div>
     <div class="toTopBtn">
       <a href="#top"><i class="fas fa-caret-square-up"></i></a>
